css/main.css
/* ... */
div.menu-movil:hover {
  cursor: pointer;
}

@media only screen and (min-width: 768px) {
  div.menu-movil {
    display: none;
  }
}

div.menu-movil span {
  height: 8px;
  margin-bottom: 6px;
  background-color: white;
  display: block;
}

/**Talleres**/

section.programa {
  position: relative;
}
div.contenedor-video {
  max-width: 100%;
  overflow-x: hidden;
}
/*div.contenedor-video video {
  width: 100%;
}*/
div.contenido-programa { /*Por aqui esta el problema*/
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

div.programa-evento {
  background-color: rgba(255, 255, 255, .8);
  padding: 15px;
  margin-top: 80px;
}
@media only screen and (min-width: 768px) {
  div.programa-evento {
    width: 70%;
  }
}
@media only screen and (min-width: 992px) {
  div.programa-evento {
    width: 50%;
  }
}

nav.menu-programa{
  width: 100%;
  border-bottom: 1px solid #fe4918;
  padding-bottom: 10 px;
}

@media only screen and (min-width: 768px) {
  nav.menu-programa{
    display: table;
  }
}

nav.menu-programa a {
  display: block;
  text-align: center;
  color: #000000;
  text-decoration: none;
  font-family: 'Oswald', sans-serif;
  margin-bottom: 10px;
  font-size: 1.2em;
}
@media only screen and (min-width: 768px) {
  nav.menu-programa a{
    display: table-cell;
  }
}

nav.menu-programa a i,
div.detalle-evento p i{
  color: #fe4918;
  font-size: 1.6em;
  margin-right: 10px;
}

/**Detalle Evento*/
div.detalle-evento{
  margin-top: 20px;
  border-bottom: 1px solid black;
  padding: 0 20px;
}

div.detalle-evento:nth-child(2){
  border: none;
}

div.detalle-evento p {
  margin-bottom: 20px;
  font-size: 20px;
}

/**Invitados**/ 
ul.lista-invitados li {
  padding: 10px;
  float: left;
  
}

@media only screen and (min-width:480px) {
  ul.lista-invitados li {
    width: 50%;
    padding: 0;   
  }
}
@media only screen and (min-width:768px) {
  ul.lista-invitados li {
    width: 33.3%;        
  }
}

div.invitado {
 position: relative;
 overflow: hidden;/*Hasta aqui las imagenes se deberian cortar.*/
}

div.invitado img {
  max-width: 100%;
  filter:gray;
  transition: all .5s ease-in-out;
  -webkit-filter: grayscale(1);
  -webkit-transition: all .5s ease-in-out;  
}

div.invitado:hover img {
  filter: grayscale(0);
  -webkit-filter: grayscale(0);
  -webkit-transform: scale(1.1);
  transform: rotate(3deg);
}

div.invitado p {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 15px 10px;
  margin: 0;
  background-color: rgba(0, 0, 0, 0.55);
  width: 100%;
  text-align: left;
  font-family: 'Oswald', sans-serif;
  color: #fe4918;
  text-transform: uppercase; 
  transition:  all .5s ease-in-out;
  -webkit-transition: all .5s ease-in-out;
}

div.invitado:hover p {
  bottom: -80px;
  opacity: 0;
}

/**Contador **/

.parallax::before {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
  -webkit-filter: brightness(.8);
  filter: brightness(.8);
}
div.contador {
  position: relative;
  height: auto;
}
div.contador::before {
  background-image: url(../img/bg-resumen.jpg);
  content: '';
}
ul.resumen-evento {
  position: relative;
  padding: 120px 0;
}
ul.resumen-evento li {
  width: 50%;
  float: left;
  text-align: center;
  color: #ffffff;
  text-transform: uppercase;
  font-family: 'Oswald', sans-serif;
  font-size: 24px;
}
@media only screen and (min-width: 768px) {
  ul.resumen-evento li {
    width: 25%;  
  }
}
p.numero {
  color: #fe4918;
  font-size: 4em;
  display: block;
  margin: 0 0 10px 0;
  font-family: 'Oswald', sans-serif;
}

/**Tabla de precios**/

ul.lista-precios > li {
  padding: 0;
}
@media only screen and (min-width: 768px) {
  ul.lista-precios > li {
    float: left;
    width: 33.3%;
    /*padding: 0; Este padding no esta en el curso. Investiga por que el padding principlal esta asi*/
  }
}

div.tabla-precio{
  border: 1px solid #e1e1e1;
  background-color: #ffffff;
  padding: 40px 0;
  text-align: center;
  transition: all .3s ease;
}

div.tabla-precio:hover {
  transform: scale(1.1);
  border: 1px solid #fe4918;
  box-shadow: 0px 0px 50px #666;
}

div.tabla-precio ul li {
  font-family: 'PT Sans', sans-serif;
  font-size: 14px;
  margin-bottom: 20px;
  text-transform: uppercase;
  color: #868686;
  line-height: 26px;
}

div.tabla-precio ul li::before {
  font-family: 'FontAwesome';
  display: inline-block;
  vertical-align: top;
  padding: 0 5px;
  font-size: 20px;
  color: green;
  -webkit-font-smoothing: antialiased;
  content: '\f00c';
}

div.tabla-precio h3 {
  font-family: 'Oswald', sans-serif;
  font-size: 16px;
  text-transform: uppercase;
}

div.tabla-precio p.numero {
  color: #000000;
  margin: 20px 0;
}

/**MAPA**/
div.mapa {
  height: 420px;
  background-color: green;
}

/**Testimoniales**/
div.testimoniales {
  padding-bottom: 20px;  
}

/*div.testimonial {
 padding: 5px;      /*Esto aqui me pone un testimoniual en la linea de abajo, no deja alinearse los 3. 
}*/

@media only screen and (min-width: 768px) {
  div.testimonial {
    float: left;
    width: 33.3%;
  }
}

blockquote {
  background-color: #ffffff;
  border: 1px solid #e1e1e1;
  position: relative;
  margin: 0 0 10px 0;
}

blockquote p {
  text-align: justify!important;
  font-size: 1em!important;
  font-family: 'PT Sans', sans-serif;
  padding: 0 20px 0 65px;
}

blockquote p::before { /*pseudo-selector*/
  content: '\201c';
  position: absolute;
  left: 13px;
  top: -6px;
  font-size: 8rem;
  margin: 0;
  padding: 0;
  line-height: 1;
  color: #fe4918;
}

footer.info-testimonial {
  padding: 0;
}

footer.info-testimonial img { /*Issue with images. Fix it*/
  float: left;
  width: 20%;
  border-radius: 50%;
  margin-left: 20px;
}
/* ... */

